fix property align-items

--- a/style/filter.css
+++ b/style/filter.css
@@ -23,7 +23,7 @@
 .filter__fieldset{
     display: flex;
     flex-direction: column;
-    align-self: start;
+    align-items: start;
 }
 
 .filter__legend{
